--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <h2>Regards</h2>
     <p>
-      You know who (from the raiz, for the raiz)
+      You know who - Charliie (from the raiz, for the raiz)
     </p>
   </main>
 
